--- a/package.json
+++ b/package.json
@@ -3,9 +3,21 @@
   "private": false,
   "version": "0.0.1",
   "type": "module",
+  "main": "./dist/skystreet-ui.umd.js",
+  "module": "./dist/skystreet-ui.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/skystreet-ui.es.js",
+      "require": "./dist/skystreet-ui.umd.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build && tsc -p tsconfig.build.json",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -28,6 +40,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3",
-    "vite": "^5.4.21"
+    "vite": "^5.4.21",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
