--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,48 +1,35 @@
-name: Release
+name: Build and Test
 
 on:
   push:
-    branches:
-      - main
-
-permissions:
-  contents: write # to be able to publish a GitHub release
-  issues: write # to be able to comment on released issues
-  pull-requests: write # to be able to comment on released pull requests
+  pull_request:
 
 jobs:
-  release:
-    name: Release
+  build:
+    name: Build and test code
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Setup Bun
+      - name: Setup bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "lts/*"
-          registry-url: "https://registry.npmjs.org"
+      - name: Install packages
+        run: bun install
 
-      - name: Install dependencies
-        run: bun install --frozen-lockfile
-
-      - name: Build
+      - name: Build code
         run: bun run build
 
-      - name: Release
-        uses: cycjimmy/semantic-release-action@v4
-        with:
-          extra_plugins: |
-            @semantic-release/git
-            @semantic-release/npm
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Test
+        run: bun run test
+
+      - name: Test
+        run: bun run test:cf
+
+      - name: Publish Preview
+        if: github.event_name == 'pull_request'
+        run: bunx pkg-pr-new publish
