feat: Separate library build from application build with dedicated Vite config and script.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         run: bun install
 
       - name: Build code
-        run: bun run build
+        run: bun run build:lib
 
       - name: Publish Preview
         if: github.event_name == 'pull_request'
